# topologic

./: README.md  pyproject.toml
examples/: logikal.py
examples/j_operator_basic/: defect_demo.py  j_point_demo.py  resonance_demo.py  twist_demo.py
topologic/: __init__.py  defect.py  j_operator.py  resonance.py  twist.py
