[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "topologic"
version = "0.1.0"
description = "Topological logic for signals: twist, defect, resonance, J-operator."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Jacek Stanisław Kielich" }
]

keywords = [
    "topology",
    "signal-processing",
    "anomaly-detection",
    "mathematics",
    "machine-learning",
    "timdr",
    "twist",
    "defect",
    "resonance",
    "j-operator"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/USER/topologic"
Repository = "https://github.com/USER/topologic"

[tool.setuptools.packages.find]
include = ["topologic"]
